--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '1'
+version: '2'
 services:
     web1:
         build: ./nginx
@@ -15,6 +15,8 @@ services:
         volumes:
          - /var/log/mysql:/var/log/mysql
          - /var/lib/mysql:/var/lib/mysql
+        environment:
+         - MYSQL_ROOT_PASSWORD=matkhaudedoan
         ports:
          - "3306:3306"
     php:
