--- a/php-56fpm/Dockerfile
+++ b/php-56fpm/Dockerfile
@@ -8,7 +8,7 @@ RUN rm -rf /etc/php-fpm.conf && \
 ADD configs/php-fpm.conf /etc/
 ADD configs/www.conf /etc/php-fpm.d/
 
-RUN apt-get update
+RUN apt-get update -y
 RUN apt-get install -y php5-dev php5-mysql gcc libpcre3-dev
 
 COPY cphalcon.tar.gz /cphalcon.tar.gz
@@ -18,8 +18,9 @@ RUN cd / && \
     cd cphalcon/build && \
     ./install
 
-# COPY configs/phalcon.ini /etc/php5/mods-available/phalcon.ini
-# COPY configs/phalcon.ini /etc/php5/cli/conf.d/30-phalcon.ini 
+
+RUN ln -s /etc/php5/cli/conf.d/* /usr/local/etc/php/conf.d/
+
 COPY configs/phalcon.ini /usr/local/etc/php/conf.d/phalcon.ini
 COPY configs/php.ini /usr/local/etc/php/php.ini    
  
