--- a/php-56fpm/configs/www.conf
+++ b/php-56fpm/configs/www.conf
@@ -36,7 +36,8 @@ group = nginx
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /var/run/php-fpm/php-fpm.sock
+;listen = /var/run/php-fpm/php-fpm.sock
+listen = 127.0.0.1:9000
 
 ; Set listen(2) backlog.
 ; Default Value: 65535
