--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     web1:
         build: ./nginx
         volumes:
-         - ./etc/nginx/sites-enabled:/etc/nginx/sites-enabled
-         - ./var/www/sites:/var/www/sites
+         - /etc/nginx/sites-enabled:/etc/nginx/sites-enabled
+         - /var/www/sites:/var/www/sites
         ports:
          - "80:80"
         links:
@@ -13,14 +13,14 @@ services:
     mariadb:
         build: ./mariadb
         volumes:
-         - ./var/log/mysql:/var/log/mysql
-         - ./var/lib/mysql:/var/lib/mysql
+         - /var/log/mysql:/var/log/mysql
+         - /var/lib/mysql:/var/lib/mysql
         ports:
          - "3306:3306"
     php:
         build: ./php-56fpm
         volumes:
-         - ./var/log/php:/var/log/php
+         - /var/log/php:/var/log/php
         ports:
          - "9000:9000"
             
