Update php-fpm56, insert php.ini, phalcon.ini

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
         volumes:
          - /var/log/php:/var/log/php
          - /var/www/sites:/var/www/sites
+         - /home/download/phalcon-devtools:/home/download/phalcon-devtools
         ports:
          - "9000:9000"
             
