--- a/php-56fpm/Dockerfile
+++ b/php-56fpm/Dockerfile
@@ -8,8 +8,23 @@ RUN rm -rf /etc/php-fpm.conf && \
 ADD configs/php-fpm.conf /etc/
 ADD configs/www.conf /etc/php-fpm.d/
 
+RUN apt-get update
+RUN apt-get install -y php5-dev php5-mysql gcc libpcre3-dev
+
+COPY cphalcon.tar.gz /cphalcon.tar.gz
+
+RUN cd / && \
+    tar -xvf /cphalcon.tar.gz && \
+    cd cphalcon/build && \
+    ./install
+
+# COPY configs/phalcon.ini /etc/php5/mods-available/phalcon.ini
+# COPY configs/phalcon.ini /etc/php5/cli/conf.d/30-phalcon.ini 
+COPY configs/phalcon.ini /usr/local/etc/php/conf.d/phalcon.ini
+COPY configs/php.ini /usr/local/etc/php/php.ini    
+ 
 # Define VOLUME
-VOLUME ["/var/log/php"]
+VOLUME ["/var/log/php", "/home/download/phalcon-devtools"]
 
 EXPOSE 9000
 CMD ["php-fpm"]
